--- a/site_oficial/public/css/fans.css
+++ b/site_oficial/public/css/fans.css
@@ -3,16 +3,20 @@
     padding-right: 12px;
     text-align: center;
 }
+
 .navbar-links li{
     padding-top: 10px;
 }
+
 .navbar-links a{
     color:#5b6464;
     font-size: 24px;
 }
+
 .navbar-links a:hover{
     color:#a7b3b3;
 }
+
 .duo-name{
     float:left;
     margin-left: 50px;
@@ -21,29 +25,35 @@
     font-size: 72px;
     margin-top: -16px;
 }
+
 .navbar-list {
     list-style: none;
     text-align: right;
 }
+
 .navbar-icons{
     list-style: none;
     float: left;
     color:black;
 }
+
 .navbar-list li {
     display: inline; 
     margin-right: 20px;
 }
+
 .navbar-list li a {
     text-decoration: none; 
     color: #5b6464;
     font-weight: lighter;
     font-size: 21px;
 }
+
 .navbar-list a:hover {
     text-decoration: underline;
     color: #5b6464;
 }
+
 .initial-content {
     background-image: url('../images/oebg.jpg');
     background-size: 100% auto;
@@ -52,6 +62,7 @@
     opacity: 95%;
     padding-bottom: 90px;
 }
+
 .initial-content::after {
     content: "";
     position: absolute;
@@ -61,6 +72,7 @@
     height: 100px;
     background: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.5));
 }
+
 .divisoria {
     border: none; 
     height: 3px; 
@@ -69,6 +81,7 @@
     width: 10%;
     margin-left: 118px;
 }
+
 .divisoria-black{
     border: none; 
     height: 3px; 
@@ -78,6 +91,7 @@
     margin-left: 118px;
     margin-bottom: 32px;
 }
+
 .title{
     margin-left: 120px;
     font-weight:lighter;
@@ -86,13 +100,20 @@
     padding-top: 36px;
     
 }
+
 .iframe-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-bottom: 72px;
+    padding-bottom: 72px;
+    padding-bottom: 72px;
 }
+
+.musica{
+    background-color: #bac2c2;
+}
+
 .sobre {
     background-image: url('../images/oe2.png');
     background-size: cover;
@@ -102,6 +123,7 @@
     opacity: 100%;
     padding-bottom: 90px;
 }
+
 .slider{
     margin-top: 80px;
     margin-left: 120px;
@@ -109,24 +131,29 @@
     height: 300px;
     overflow: hidden;
 }
+
 .slides{
     width:400%;
     height:300px;
     display: flex;
 }
+
 .slides input{
     display: none;
 }
+
 .slide{
     width: 25%;
     position: relative;
     transition: 2s;
 }
+
 .slide p{
     width: 500px;
     font-size: 20px;
     padding-right: 20px;
 }
+
 .manual-navigation{
     position: absolute;
     width: 500px;
@@ -134,6 +161,7 @@
     display: flex;
     justify-content: center;
 }
+
 .manual-btn{
     border: 2px solid black;
     padding: 5px;
@@ -142,21 +170,27 @@
     transition: 1s;
     margin-right: 18px;
 }
+
 .manual-btn:hover{
     background-color: black;
 }
+
 #radio1:checked ~ .first{
     margin-left:0;
 }
+
 #radio2:checked ~ .first{
     margin-left: -25%;
 }
+
 #radio3:checked ~ .first{
     margin-left: -50%;
 }
+
 #radio4:checked ~ .first{
     margin-left: -75%;
 }
+
 .navigation-auto div{
     border: 2px solid rgb(69, 69, 114);
     padding: 5px;
@@ -165,6 +199,7 @@
     transition: 1s;
     margin-right: 18px;
 }
+
 .navigation-auto{
     position:absolute;
     width:500px;
@@ -172,48 +207,133 @@
     display: flex;
     justify-content: center;
 }
+
 #radio1:checked ~ .navigation-auto .auto-btn1{
     background-color: black;
-} 
+}
+
 #radio2:checked ~ .navigation-auto .auto-btn2{
     background-color: black;
-} 
+}
+
 #radio3:checked ~ .navigation-auto .auto-btn3{
     background-color: black;
-} 
+}
+
 #radio4:checked ~ .navigation-auto .auto-btn4{
     background-color: black;
 }
-.agenda{
+
+.agenda {
     background-color: #5b6464;
+    padding-bottom: 70px;
+    min-height: 100vh;
 }
-.agenda h1{
-    color:white;
+
+.agenda h1 {
+    color: white;
 }
+
+.eventos{
+    padding-top: 50px;   
+}
+
+.eventos .button{
+    text-decoration: none;
+    color:antiquewhite;
+    background-color: #39657a;
+    border-radius: 10px;
+    line-height: 30px;
+    padding: 5px 20px 5px 20px;
+}
+
+.eventos .button:hover{
+    background-color: #598497;
+}
+
 .evento {
-    width: 60%;
-    height: 70px;
-    background-color: blue;
+    width: 50%;
+    height: 80px;
+    background-color: black;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 0 10px;
     margin: 0 auto;
-}
-.data {
-    width: 60px;
-    height: 60px;
-    background-color: gray;
+    margin-top: 20px;
 }
 
-.local {
+.evento:hover{
+    box-shadow: 2px 2px 4px black;
+}
+
+.data {
+    width: 70px;
+    height: 70px;
+    background-color: #333535;
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    color: antiquewhite!important;
+}
+
+.data-content {
+    text-align: center;
+    margin: 5px;
+}
+
+.data h2{
+    margin: 0;
+    padding-top: 5px;
+}
+.data p {
+    margin: 0;
+    padding-bottom: 7px;
+}
+
+.info {
     flex-grow: 1;
-    background-color: blue;
+    background-color: black;
     color: white;
-    text-align: right;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     padding-right: 10px;
     line-height: 60px;
 }
+
+.detail-info {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-right: 10px;
+    margin-left: 20px;
+}
+
+.detail-info h2{
+    padding-top: 8px;
+    padding-bottom: 7px;
+    font-size: 16px;
+}
+
+.detail-info p{
+    font-size: 16px;
+    margin: 0;
+    line-height: 20px;
+}
+
+.info h2,
+.info p {
+    margin: 0;
+}
+
+#local{
+    font-size: 12px;
+}
+#local i{
+    margin-right: 8px;
+}
+
 .divisoria-white{
     border: none; 
     height: 3px; 
@@ -223,6 +343,7 @@
     margin-left: 118px;
     margin-bottom: 32px;
 }
+
 .contato{
     background-image: url('../images/contato.jpg');
     background-size: 100% auto;
@@ -231,14 +352,17 @@
     opacity: 90%;
     padding-bottom: 90px;
 }
+
 .contatos{
     margin-left: 128px;
     font-size: 16px;
 }
+
 .contatos a{
     text-decoration: none;
     color:black;
 }
+
 .footer {
     display: flex;
     align-items: center;
@@ -252,11 +376,13 @@
     height: auto;
     margin-right: 40px; 
 }
+
 .footer a {
     flex-grow: 1; 
     color: rgb(156, 156, 158); 
     text-decoration: none; 
 }
+
 .footer span {
     font-size: 13px;
     color: rgb(156, 156, 158); 
@@ -264,3 +390,4 @@
     padding-left: 40px;
     padding-right: 40px; 
 }
+
